--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <titLe>
-        WELCOME TO IIIT-KOTA
+        WELCOME TO IIIT-KOTA (A wonderful college journey)
     </title>
     <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
